--- a/src/styles/_taskDetail.scss
+++ b/src/styles/_taskDetail.scss
@@ -1,6 +1,6 @@
 .task-detail {
   padding: 16px;
-  background-color: #fbfafa;
+  background-color: #f0f0f0;
   border-radius: 20px;
   height: 90vh;
   .form-field {
