--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -1,25 +1,36 @@
 .sidebar {
   padding: 16px;
-  background-color: #fbfafa;
-  border-radius: 20px;
-  height: 90vh;
-  .menu {
-    text-align: left;
-    font-size: 40px;
+  background-color: #f5f5f5;
+  height: 100vh;
+  overflow-y: auto;
+
+  .menu-header {
     font-weight: bold;
+    margin-bottom: 16px;
   }
+
   .search-field {
     margin-bottom: 16px;
   }
 
   .list-header {
-    text-align: left;
     font-weight: bold;
+    color: #757575;
     margin-top: 16px;
     margin-bottom: 8px;
   }
 
   .category-list {
+    margin-bottom: 16px;
+  }
+
+  .new-list-field {
+    margin-top: 16px;
+  }
+
+  .color-picker {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 16px;
   }
 
