--- a/src/components/pages/home_screen/task-list/_taskList.scss
+++ b/src/components/pages/home_screen/task-list/_taskList.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     padding: 8px 0;
-
+    border-bottom: solid 2px #f5f5f5;
     .task-checkbox {
       margin-right: 8px;
     }
