--- a/src/components/pages/home_screen/task-list/_taskList.scss
+++ b/src/components/pages/home_screen/task-list/_taskList.scss
@@ -20,4 +20,10 @@
   .add-task-btn {
     margin-top: 16px;
   }
+  .list-color-indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
 }
