--- a/src/components/pages/home_screen/task-detail/_taskDetail.scss
+++ b/src/components/pages/home_screen/task-detail/_taskDetail.scss
@@ -3,10 +3,21 @@
   background-color: #f5f5f5;
   border-radius: 20px;
   height: 90vh;
+  position: relative;
   animation: slide-in 0.3s ease-out;
   .task-detail-header {
-    font-size: 24px;
-    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .task-detail-title {
+      font-size: 24px;
+      font-weight: bold;
+    }
+  }
+  .close-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
   }
   .form-field {
     margin-bottom: 16px;
