--- a/src/components/pages/home_screen/sidebar/_sideBar.scss
+++ b/src/components/pages/home_screen/sidebar/_sideBar.scss
@@ -1,6 +1,8 @@
+@import "../../../variables";
+
 .sidebar {
   padding: 16px;
-  background-color: #f5f5f5;
+  background-color: $background-color;
   height: max-content;
   border-radius: 20px;
   display: flex;
@@ -53,7 +55,7 @@
 
   .list-header {
     font-weight: bold;
-    color: #757575;
+    color: $text-color;
     margin-top: 16px;
     margin-bottom: 8px;
   }
