--- a/src/components/pages/home_screen/task-list/_taskList.scss
+++ b/src/components/pages/home_screen/task-list/_taskList.scss
@@ -1,9 +1,11 @@
+@import "../../../variables";
+
 .task-list {
   .task-item {
     display: flex;
     align-items: center;
     padding: 8px 0;
-    border-bottom: solid 2px #f5f5f5;
+    border-bottom: solid 2px $background-color;
     .task-checkbox {
       margin-right: 8px;
     }
