--- a/src/components/pages/setting_modal/_setting.scss
+++ b/src/components/pages/setting_modal/_setting.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 .settings-container {
   display: flex;
   flex-direction: column;
@@ -5,9 +7,9 @@
   height: 100vh;
   position: relative;
   padding: 16px;
-  background-color: #f5f5f5;
+  background-color: $background-color;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: $box-shadow;
   animation: slide-in 0.3s ease-out;
 
   .settings-header {
@@ -47,7 +49,7 @@
     .MuiListItemText-root h6 {
       font-size: 18px;
       font-weight: bold;
-      color: #333;
+      color: $text-color;
     }
 
     .MuiDivider-root {
@@ -56,16 +58,17 @@
 
     .MuiListItem-button {
       &:hover {
-        background-color: #f5f5f5;
+        background-color: $background-color;
       }
     }
 
     .MuiSvgIcon-root {
-      color: #999;
+      color: $icon-color;
       font-size: 18px;
     }
   }
 }
+
 @keyframes slide-in {
   from {
     transform: translateX(100%);
